--- a/LinkedList/Makefile
+++ b/LinkedList/Makefile
@@ -9,7 +9,7 @@ CC = gcc
 LDLIB = -lm
 DEPS = $(patsubst %,$(INC)/%,$(_DEPS))
 
-_OBJ = sll_main.o
+_OBJ = sll_main.o sll_utils.o
 OBJ = $(patsubst %,$(OBJDIR)/%,$(_OBJ))
 
 all: $(BIN)/sll
@@ -18,10 +18,10 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.c $(DEPS)
 	mkdir -p $(BUILDDIR)
 	mkdir -p $(OBJDIR)
 	mkdir -p $(BIN)
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CC) -c -g -o $@ $< $(CFLAGS)
 
 $(BIN)/sll: $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS) $(LDLIB)
+	$(CC) -g -o $@ $^ $(CFLAGS) $(LDLIB)
 .PHONY: clean
 
 clean:
